Fixes wrong alignment of buttons on the toolbar.

--- a/pages/drawer.scss
+++ b/pages/drawer.scss
@@ -28,4 +28,16 @@
     flex: 1 1 auto;
     justify-content: flex-end;
     margin-right: 20px;
+
+    .button {
+        align-items: center;
+    }
+
+    .link {
+        text-decoration: none;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: inherit;
+    }
 }
